--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,6 +1,6 @@
 * {
     border: none;
-    font-family: Font Awesome, Roboto, Arial, sans-serif;
+    font-family: "CaskaydiaCove Nerd Font", Roboto, Arial, sans-serif;
     font-size: 13px;
     color: #ffffff;
     border-radius: 10px;
@@ -20,6 +20,7 @@ window#waybar.empty #window {
 .modules-right {
     background-color: rgba(0,43,51,0.85);
     margin: 2px 10px 0 0;
+    padding: 0 0 0 8px;
 }
 /*.modules-center {
     background-color: rgba(0,43,51,0.85);
@@ -29,10 +30,11 @@ window#waybar.empty #window {
 .modules-left {
     margin: 2px 0 0 10px;
     background-color: rgba(0,43,51,0.85);
+    padding: 0 4px;
 }
 /*-----modules indv----*/
 #workspaces button {
-    padding: 1px 5px;
+    padding: 0 5px;
     background-color: transparent;
 }
 #workspaces button:hover {
@@ -58,10 +60,10 @@ window#waybar.empty #window {
 #custom-menu,
 #custom-notification
 #idle_inhibitor {
-    padding: 0 5px;
 }
 #clock.date {
     background-color: rgba(0,149,209,0.6);
+    padding: 0 6px;
 }
 #mode {
     color: #cc3436;
@@ -69,12 +71,14 @@ window#waybar.empty #window {
 }
 #custom-power {
     background-color: rgba(0,119,179,0.6);
-    border-radius: 100px;
-    padding: 5px 2px 0px 5px;
+    border-radius: 10px;
+    padding-right: 2px;
 }
 #pulseaudio {
-    font-family: "Font Awesome";
-    padding: 0 10px;
+    margin: 0 2px;
+}
+#network {
+    margin: 0 2px;
 }
 /*-----Indicators----*/
 #idle_inhibitor.activated {
@@ -85,6 +89,9 @@ window#waybar.empty #window {
     color: #cc3436;
 }
 */
+#battery {
+    margin: 0 2px;
+}
 #battery.charging {
     color: #2dcc36;
 }
